# waveshare-home-dashboard

./: .gitignore  LICENSE  README.md
docs/: OTA.md
eez-studio/: .gitignore  BusTimes.eez-project  BusTimes.eez-project-ui-state  waveshare-dashboard.eez-project
esp-idf/: .gitignore  CMakeLists.txt  build.sh  copy_ui.py  flash-monitor.sh  monitor.sh  partitions.csv  release.sh  sdkconfig.defaults  setup.sh  start.sh
esp-idf/components/ClockTools/: CMakeLists.txt  ClockTools.cpp  ClockTools.h  Kconfig
esp-idf/components/HttpServer/: CMakeLists.txt  HtmlUtils.cpp  HtmlUtils.h  HttpServer.cpp  HttpServer.h  LogBuffer.cpp  LogBuffer.h
esp-idf/components/HttpTools/: CMakeLists.txt  HttpTools.cpp  HttpTools.h
esp-idf/components/LVGL/: CMakeLists.txt  DisplayPanel.cpp  DisplayPanel.h  README.md  lv_conf.h  lvgl_v8_port.h
esp-idf/components/MqttTools/: CMakeLists.txt  Kconfig  (+2 more)
esp-idf/components/ui/: CMakeLists.txt  copy-ui.sh
esp-idf/main/: CMakeLists.txt  Kconfig  data_fetcher.h  global_vars.h  http_data_handlers.cpp  http_data_handlers.h  idf_component.yml  json_tools.h  main.cpp  stats.h  system_info.h  time_utils.h  user_actions.h
esp-idf/test/: run_tests.sh  test_days_between.cpp  test_format_due_label.cpp  test_format_last_seen.cpp  test_format_lead_time.cpp  test_format_long_date.cpp  test_format_short_date.cpp
images/: .gitignore  README.md  bin.pxd  bus.pxd  clear-day.pxd  clear-night.pxd  cloudy.pxd  convert_icons.py  fog.pxd  hail.pxd  home.pxd  icons.yaml  menu.pxd  no-data.pxd  no-wifi.pxd  none.pxd  partly-cloudy-day.pxd  partly-cloudy-night.pxd  rain.pxd  recycling.pxd  sleet.pxd  snow.pxd  start-up.pxd  sunrise.pxd  sunset.pxd  thunderstorm.pxd  triangle-down.pxd  triangle-up.pxd  wind.pxd
platformio/: .gitignore  CMakeLists.txt  copy_templates.py  copy_ui.py  platformio.ini  sdkconfig.defaults  sdkconfig.release
platformio/.claude/: settings.local.json
platformio/boards/: waveshare_esp32_touch_lcd_43b.json
platformio/components/ClockTools/: CMakeLists.txt  ClockTools.cpp
platformio/include/: lv_conf.h
platformio/main/: CMakeLists.txt  main.cpp
platformio/setup/: eez_framework_CMakeLists.txt
platformio/src/: main.cpp
server/: .gitignore  Dockerfile  entrypoint.sh  publish.sh  pyproject.toml  requirements.in  requirements.txt
server/dashboard/: __init__.py  __main__.py  config.py  mqtt_publisher.py  ota.py  oxontime.py  recycling.py  unifi.py  weather.py
server/stubs/: recurring_ical_events.pyi
(+30 files in other folders)
